@@ -58,23 +58,27 @@ class UsersViewLevel extends JView
 
 		JToolBarHelper::title(JText::_($isNew ? 'COM_USERS_VIEW_NEW_LEVEL_TITLE' : 'COM_USERS_VIEW_EDIT_LEVEL_TITLE'), 'levels-add');
 
-		if ($canDo->get('core.edit')) {
+		if ($canDo->get('core.edit')) 
+		{
 			JToolBarHelper::apply('level.apply','JTOOLBAR_APPLY');
 			JToolBarHelper::save('level.save','JTOOLBAR_SAVE');
 			JToolBarHelper::custom('level.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
-		
-		// If an existing item, can save to a copy.
-		if (!$isNew && $canDo->get('core.create')) {
-			JToolBarHelper::custom('level.save2copy', 'save-copy.png', 'save-copy_f2.png', 'JTOOLBAR_SAVE_AS_COPY', false);
-		}
 
-		if (empty($this->item->id))  {
-			JToolBarHelper::cancel('level.cancel','JTOOLBAR_CANCEL');
-		} else {
-			JToolBarHelper::cancel('level.cancel', 'JTOOLBAR_CLOSE');
-		}
+			// If an existing item, can save to a copy.
+			if (!$isNew && $canDo->get('core.create')) 
+			{
+				JToolBarHelper::custom('level.save2copy', 'save-copy.png', 'save-copy_f2.png', 'JTOOLBAR_SAVE_AS_COPY', false);
+			}
 
-		JToolBarHelper::divider();
-		JToolBarHelper::help('JHELP_USERS_ACCESS_LEVELS_EDIT');
+			if (empty($this->item->id))  
+			{
+				JToolBarHelper::cancel('level.cancel','JTOOLBAR_CANCEL');
+			} else {
+				JToolBarHelper::cancel('level.cancel', 'JTOOLBAR_CLOSE');
+			}
+
+			JToolBarHelper::divider();
+			JToolBarHelper::help('JHELP_USERS_ACCESS_LEVELS_EDIT');
+		}
 	}
 }
